--- a/APIKafka/APIKafka.csproj
+++ b/APIKafka/APIKafka.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.6.0" />
     <PackageReference Include="Confluent.Kafka" Version="1.7.0" />
     <PackageReference Include="Confluent.SchemaRegistry.Serdes.Json" Version="1.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
