--- a/APIKafka/appsettings.json
+++ b/APIKafka/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "bootstrapServer": "kafka-event.servicebus.windows.net:9093",
-  "topicName": "topic-acoes",
-  "password": "Endpoint=sb://kafka-event.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=3kzKzOyIRBLsDDuaD990ZIDBar0CncuUcnvUtWYyi5g="
+  "bootstrapServer": "",
+  "topicName": "",
+  "password": ""
 }
